# chinese-reader

./: .dockerignore  .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  runtime.py  schema.sql
backend/app/content/: __init__.py  base.py  epub.py  plaintext.py
backend/app/core/: coverage.py  progress.py  state.py
backend/app/data/: cedict_sample.u8  userdict.txt
backend/app/data/hsk/: hsk1.tsv  hsk2.tsv  hsk3.tsv  hsk4.tsv  hsk5.tsv  hsk6.tsv
backend/app/language/: __init__.py  base.py
backend/app/language/chinese/: __init__.py  benchmarks.py  convert.py  dictionary.py  module.py  pinyin.py  segment.py
backend/app/routers/: library.py  progress.py  read.py  state.py
backend/scripts/: fetch_cedict.py
backend/tests/: conftest.py  test_api.py  test_language.py  test_library_words.py  test_progress.py  test_state_coverage.py
deploy/: .env.example  Dockerfile  compose.yaml
docs/: ARCHITECTURE.md  DECISIONS.md
web/: index.html
