[project]
name = "chinese-reader"
version = "0.1.0"
description = "A self-hosted Chinese reading-and-recognition tool"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "jieba",
    "pypinyin",
    "opencc-python-reimplemented",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
